--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-html": "^2.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "gh-pages": "^6.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
     "rollup": "^4.0.0",
     "rollup-plugin-css-only": "^4.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "svelte": "^4.0.0",
-    "svelte-preprocess": "^5.0.0",
-    "typescript": "^5.0.0",
-    "tslib": "^2.0.0",
-    "gh-pages": "^6.0.0",
     "svelte-check": "^3.0.0",
-    "prettier": "^3.0.0",
-    "prettier-plugin-svelte": "^3.0.0"
+    "svelte-preprocess": "^5.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "sirv-cli": "^2.0.0"
   },
   "packageManager": "pnpm@10.11.1"
-} 
+}
