Change to Vue and add solvers

--- a/.prettierrc
+++ b/.prettierrc
@@ -17,12 +17,11 @@
   "insertPragma": false,
   "requirePragma": false,
   "proseWrap": "preserve",
-  "plugins": ["prettier-plugin-svelte"],
   "overrides": [
     {
-      "files": "*.svelte",
+      "files": "*.vue",
       "options": {
-        "parser": "svelte"
+        "parser": "vue"
       }
     },
     {
