--- a/package.json
+++ b/package.json
@@ -4,35 +4,27 @@
   "description": "Curve Fitting GitHub Page",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c",
-    "start": "sirv public --no-clear",
-    "deploy": "pnpm run build && gh-pages -d public",
-    "format": "prettier --write src/**/*.{js,ts,svelte,html,css,md}",
-    "format:check": "prettier --check src/**/*.{js,ts,svelte,html,css,md}",
-    "check": "svelte-check --tsconfig ./tsconfig.json && pnpm run format:check"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-html": "^2.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "gh-pages": "^6.0.0",
-    "prettier": "^3.0.0",
-    "prettier-plugin-svelte": "^3.0.0",
-    "rollup": "^4.0.0",
-    "rollup-plugin-css-only": "^4.0.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.0.0",
-    "svelte-preprocess": "^5.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^5.0.0"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "deploy": "pnpm run build && gh-pages -d dist",
+    "format": "prettier --write src/**/*.{js,ts,vue,html,css,md}",
+    "format:check": "prettier --check src/**/*.{js,ts,vue,html,css,md}",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "vue": "^3.5.13",
+    "mathjs": "^14.5.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "typescript": "~5.6.0",
+    "vite": "^6.0.7",
+    "vue-tsc": "^2.2.0",
+    "prettier": "^3.4.2",
+
+    "gh-pages": "^6.2.0"
   },
   "packageManager": "pnpm@10.11.1"
 }
