--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "mathjs": "^14.5.2"
+    "mathjs": "^14.5.2",
+    "ml-levenberg-marquardt": "^4.1.3",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "gh-pages": "^6.2.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.6.0",
     "vite": "^6.0.7",
-    "vue-tsc": "^2.2.0",
-    "prettier": "^3.4.2",
-
-    "gh-pages": "^6.2.0"
+    "vue-tsc": "^2.2.0"
   },
   "packageManager": "pnpm@10.11.1"
 }
